--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -15,3 +15,17 @@
     margin-right: 5px;
     margin-left: 50px;
 }
+.pagination{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 30px;
+}
+.pagination button{
+    padding: 5px 10px;
+    margin-right: 10px;
+}
+.pagination .selected{
+    background-color: rgb(42, 42, 179);
+    color: white;
+}
